Resolve feedback